# AGENTIC_RAG

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  tests.py
agents/: __init__.py  response_generator.py  router.py  test_agents.py
chroma_db/: chroma.sqlite3
config/: __init__.py  settings.py
evaluation/: __init__.py  evaluation_report.py  ragas_eval.py  test_queries.py
evaluation/reports/: evaluation_report_20260421_212447.md  evaluation_report_20260421_212724.md  evaluation_report_20260421_213146.md  evaluation_results_20260421_212447.json  evaluation_results_20260421_212724.json  evaluation_results_20260421_213146.json
ingestion/: __init__.py  ingest_data.py  load_rules.py  load_schema.py
models/: __init__.py  enums.py  schemas.py  state.py
notebook/: experiment.ipynb
notebook/chroma_db/: chroma.sqlite3
project_documentation/: PROJECT_STATUS.md
retriever/: __init__.py  retrieval.py  test_retrieval.py  vector_store.py
ui/: __init__.py
workflows/: __init__.py  graph_builder.py  nodes.py  test_workflow.py  visualize_graph.py
